# Advent-of-Code

./: README.md
2023/: README.md
2023/d1/: a.out  m.mod  main.f90
2023/d10/: main.f90  queueL.f90  vector.f90
2023/d11/: main.f90
2023/d12/: main.f90  vector.f90  vectorChar.f90  vectorLogical.f90
2023/d13/: main.f90  vectorChar.f90
2023/d14/: main.f90  mapGrid.f90
2023/d15/: container.f90  main.f90
2023/d16/: main.f90  queueL.f90  vector.f90
2023/d2/: main.f90
2023/d3/: main.f90
2023/d4/: main.f90
2023/d5/: main.f90
2023/d6/: main.f90
2023/d7/: main.f90
2023/d8/: main.f90
2023/d9/: main.f90
2024/: .clangd  CMakeLists.txt  README.md  fetch_rapids.cmake
2024/d1/: main.cu
2024/d2/: main.cu
2024/d3/: main.cu
